--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-cerca-studente></app-cerca-studente>
-<app-cerca-sezione></app-cerca-sezione>
+<div>
+  <app-cerca-studente></app-cerca-studente>
+</div>
+<div>
+  <app-cerca-sezione></app-cerca-sezione>
+</div>
