--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div>
+<div ngIf="cercaStudenti">
   <app-cerca-studente></app-cerca-studente>
 </div>
 <div>
   <app-cerca-sezione></app-cerca-sezione>
 </div>
+<div></div>
