--- a/src/app/cerca-studente/cerca-studente.component.html
+++ b/src/app/cerca-studente/cerca-studente.component.html
@@ -1,5 +1,20 @@
-<form>
-  <input type="text" name="nomeStudente" [(ngModel)]="nomeStudente" />
-</form>
-<button (click)="cercaStudente(nomeStudente)">Cerca</button>
-<p>{{ studente }}</p>
+<section>
+  <mat-card>
+    <form class="example-form">
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Studente</mat-label>
+        <input
+          #nomeStudente
+          matInput
+          type="text"
+          name="nomeStudente"
+          placeholder="Inserisci il nome"
+        />
+      </mat-form-field>
+    </form>
+    <button mat-raised-button (click)="cercaStudente(nomeStudente.value)">
+      Cerca
+    </button>
+    <p>{{ studente }}</p>
+  </mat-card>
+</section>
