--- a/src/app/cerca-sezione/cerca-sezione.component.html
+++ b/src/app/cerca-sezione/cerca-sezione.component.html
@@ -5,7 +5,7 @@
     </option>
   </select>
 </form>
-<button (click)="cercaSezione(selectSezione.value)">Cerca la sezione</button>
+<button (click)="cercaSezione(selectSezione.value)">Cerca</button>
 <ul *ngFor="let studente of studenti">
   <li>{{ studente.nome }}</li>
 </ul>
