--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,20 @@
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <button
+      mat-icon-button
+      class="example-icon"
+      aria-label="Example icon-button with menu icon"
+    >
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>sQuola</span>
+    <span class="example-spacer"></span>
+  </mat-toolbar-row>
+</mat-toolbar>
 <div *ngIf="cercaStudenti">
   <app-cerca-studente></app-cerca-studente>
 </div>
-<div>
+<div *ngIf="cercaSezione">
   <app-cerca-sezione></app-cerca-sezione>
 </div>
 <div></div>
