--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,43 @@
       mat-icon-button
       class="example-icon"
       aria-label="Example icon-button with menu icon"
+      [matMenuTriggerFor]="menu"
     >
       <mat-icon>menu</mat-icon>
     </button>
+    <mat-menu #menu="matMenu">
+      <button
+        mat-menu-item
+        (click)="cercaSezione = false; cercaStudenti = false"
+      >
+        <mat-icon>home</mat-icon>
+        <span>Home</span>
+      </button>
+      <button
+        mat-menu-item
+        (click)="cercaSezione = false; cercaStudenti = true"
+      >
+        <mat-icon>people</mat-icon>
+        <span>Studenti</span>
+      </button>
+      <button
+        mat-menu-item
+        (click)="cercaSezione = true; cercaStudenti = false"
+      >
+        <mat-icon>school</mat-icon>
+        <span>Aule</span>
+      </button>
+    </mat-menu>
     <span>sQuola</span>
     <span class="example-spacer"></span>
   </mat-toolbar-row>
 </mat-toolbar>
-<div *ngIf="cercaStudenti">
-  <app-cerca-studente></app-cerca-studente>
-</div>
-<div *ngIf="cercaSezione">
-  <app-cerca-sezione></app-cerca-sezione>
-</div>
-<div></div>
+<mat-card>
+  <div *ngIf="cercaStudenti">
+    <app-cerca-studente></app-cerca-studente>
+  </div>
+  <div *ngIf="cercaSezione">
+    <app-cerca-sezione></app-cerca-sezione>
+  </div>
+  <div></div>
+</mat-card>
