--- a/src/app/aggiungi-studente/aggiungi-studente.component.html
+++ b/src/app/aggiungi-studente/aggiungi-studente.component.html
@@ -19,11 +19,11 @@
       />
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Data di nascita</mat-label>
-      <input (dateInput)="foo3($event.value)" matInput [matDatepicker]="anno" />
+      <mat-label>Choose a date</mat-label>
+      <input matInput [matDatepicker]="picker" />
       <mat-hint>MM/DD/YYYY</mat-hint>
-      <mat-datepicker-toggle matSuffix [for]="anno"></mat-datepicker-toggle>
-      <mat-datepicker #anno></mat-datepicker>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
   </form>
   <mat-form-field appearance="fill">
@@ -37,7 +37,7 @@
   </mat-form-field>
   <button
     mat-raised-button
-    (click)="foo(nome.value, cognome.value, anno, sezione.value)"
+    (click)="foo(nome.value, cognome.value, picker, sezione.value)"
   >
     Cerca
   </button>
