--- a/src/app/aggiungi-studente/aggiungi-studente.component.html
+++ b/src/app/aggiungi-studente/aggiungi-studente.component.html
@@ -21,9 +21,9 @@
     <mat-form-field appearance="fill">
       <mat-label>Choose a date</mat-label>
       <input
-        (dateInput)="foo3($event.value)"
         matInput
         [matDatepicker]="picker"
+        (dateChange)="foo3($event.value)"
       />
       <mat-hint>MM/DD/YYYY</mat-hint>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
