--- a/src/app/aggiungi-studente/aggiungi-studente.component.html
+++ b/src/app/aggiungi-studente/aggiungi-studente.component.html
@@ -25,7 +25,7 @@
         [matDatepicker]="picker"
         (dateChange)="foo3($event.value)"
       />
-      <mat-hint>MM/DD/YYYY</mat-hint>
+      <mat-hint>DD/MM/YYYY</mat-hint>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
