--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,7 +1,10 @@
-<h1 mat-dialog-title>Dialog with elements</h1>
-<div mat-dialog-content>
-  This dialog showcases the title, close, content and actions elements.
-</div>
-<div mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
-</div>
+<h2 mat-dialog-title>titolo</h2>
+
+<mat-dialog-content>
+  <p>sottotitolo</p>
+</mat-dialog-content>
+
+<mat-dialog-actions>
+  <button class="mat-raised-button" (click)="close()">Close</button>
+  <button class="mat-raised-button mat-primary" (click)="save()">Save</button>
+</mat-dialog-actions>
