--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,5 +1,4 @@
-<h2 mat-dialog-title>titolo</h2>
-
+<h4 mat-dialog-title>Riepilogo</h4>
 <mat-dialog-content>
   <p>sottotitolo</p>
 </mat-dialog-content>
