--- a/src/app/aggiungi-studente/aggiungi-studente.component.html
+++ b/src/app/aggiungi-studente/aggiungi-studente.component.html
@@ -40,5 +40,7 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <button mat-raised-button (click)="openDialog()">Aggiungi</button>
+  <button mat-raised-button (click)="foo(nome, cognome, nascita, sezione)">
+    Aggiungi
+  </button>
 </section>
