6 files modified, 5 added, 3 deleted

--- a/src/app/aggiungi-studente/aggiungi-studente.component.html
+++ b/src/app/aggiungi-studente/aggiungi-studente.component.html
@@ -1,4 +1,6 @@
 <section>
+  <h5 mat-card-title>Aggiungi uno studente</h5>
+  <mat-divider></mat-divider>
   <form class="example-form">
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>Nome</mat-label>
