1 file modified, 1 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,8 +45,6 @@
       <app-aggiungi-studente></app-aggiungi-studente>
     </mat-card>
   </section>
-  <div *ngIf="cercaSezione">
-    <app-cerca-sezione [arraySezioni]="arraySezioni"></app-cerca-sezione>
-  </div>
+  <div *ngIf="cercaSezione"></div>
   <div></div>
 </mat-card>
