--- a/src/app/aggiungi-classe/aggiungi-classe.component.html
+++ b/src/app/aggiungi-classe/aggiungi-classe.component.html
@@ -1,24 +1,33 @@
-<button (click)="foo()">cerca</button>
-<mat-selection-list #studenti>
-  <mat-list-option *ngFor="let studente of arrayStudenti">
-    <mat-accordion>
-      <mat-expansion-panel hideToggle>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            {{ studente.nome + ' ' + studente.cognome }}
-          </mat-panel-title>
-          <mat-panel-description>
-            {{ 'sezione: ' + studente.sezione }}
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-        <p>{{ 'Data di nascita: ' + studente.nascita }}</p>
-      </mat-expansion-panel>
-      <mat-expansion-panel
-        (opened)="panelOpenState = true"
-        (closed)="panelOpenState = false"
-      ></mat-expansion-panel>
-    </mat-accordion>
-  </mat-list-option>
-</mat-selection-list>
+<button mat-raised-button (click)="foo()">cerca</button>
+<section *ngIf="apriLista">
+  <mat-selection-list
+    #studenti
+    (selectionChange)="selezionatiUpdate($event.source._value)"
+  >
+    <mat-list-option *ngFor="let studente of arrayStudenti" [value]="studente">
+      <mat-accordion>
+        <mat-expansion-panel hideToggle>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              {{ studente.nome + ' ' + studente.cognome }}
+            </mat-panel-title>
+            <mat-panel-description>
+              {{ 'sezione: ' + studente.sezione }}
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <p>{{ 'Data di nascita: ' + studente.nascita }}</p>
+        </mat-expansion-panel>
+        <mat-expansion-panel
+          (opened)="panelOpenState = true"
+          (closed)="panelOpenState = false"
+        ></mat-expansion-panel>
+      </mat-accordion>
+    </mat-list-option>
+  </mat-selection-list>
+  <button mat-raised-button (click)="chiudi()">Chiudi</button>
 
-<p>Options selected: {{ studenti.selectedOptions.selected.length }}</p>
+  <p *ngIf="arrayStudenti.length > 0">
+    selezionati: {{ studenti.selectedOptions.selected.length }}
+  </p>
+  <button mat-raised-button (click)="foo3()">Conferma</button>
+</section>
