--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,5 +47,5 @@
   </section>
   <div *ngIf="cercaSezione"></div>
   <div></div>
+  <app-aggiungi-classe [arraySezioni]="arraySezioni"></app-aggiungi-classe>
 </mat-card>
-<app-aggiungi-classe></app-aggiungi-classe>
