--- a/src/app/aggiungi-classe/aggiungi-classe.component.html
+++ b/src/app/aggiungi-classe/aggiungi-classe.component.html
@@ -4,7 +4,7 @@
       <mat-panel-title> Seleziona gli studenti </mat-panel-title>
     </mat-expansion-panel-header>
     <section>
-      <button mat-raised-button (click)="foo(filtraSezione.value)">
+      <button mat-raised-button (click)="cercaStudenti(filtraSezione.value)">
         cerca
       </button>
       <mat-form-field appearance="fill">
