--- a/src/app/aggiungi-classe/aggiungi-classe.component.html
+++ b/src/app/aggiungi-classe/aggiungi-classe.component.html
@@ -89,6 +89,8 @@
       </button>
       <mat-divider></mat-divider>
       <mat-card>{{ ok }}</mat-card>
+      <mat-divider></mat-divider>
+      <mat-card>{{ res }}</mat-card>
     </section>
 
     <mat-action-row>
