--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
       <app-aggiungi-studente></app-aggiungi-studente>
     </mat-card>
   </section>
-  <section *ngIf="aule">
+  <section>
     <app-aggiungi-classe [arraySezioni]="arraySezioni"></app-aggiungi-classe>
   </section>
 </mat-card>
