--- a/src/app/aggiungi-studente/aggiungi-studente.component.html
+++ b/src/app/aggiungi-studente/aggiungi-studente.component.html
@@ -50,9 +50,7 @@
   </mat-form-field>
   <button
     mat-raised-button
-    (click)="
-      aggiungiStudente(nome.value, cognome.value, nascita, sezione.value)
-    "
+    (click)="immatricola(nome.value, cognome.value, nascita, sezione.value)"
   >
     Aggiungi
   </button>
