--- a/src/app/aggiungi-classe/aggiungi-classe.component.html
+++ b/src/app/aggiungi-classe/aggiungi-classe.component.html
@@ -83,7 +83,7 @@
       </mat-form-field>
       <button
         mat-raised-button
-        (click)="foo3(selectAge.value, selectSezione.value)"
+        (click)="inserisciClasse(selectAge.value, selectSezione.value)"
       >
         Conferma
       </button>
