--- a/src/app/aula/aula.component.html
+++ b/src/app/aula/aula.component.html
@@ -1,4 +1,4 @@
 <button mat-raised-button (click)="cercaAula()">Cerca</button>
 <mat-card>
-  <p>{{ risposta }}</p>
+  <p>{{ arrayStudenti }}</p>
 </mat-card>
