--- a/src/app/aula/aula.component.css
+++ b/src/app/aula/aula.component.css
@@ -48,3 +48,9 @@
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+.example-custom-placeholder {
+  background: rgba(204, 204, 204, 0.712);
+  border: dotted 3px #999;
+  min-height: 60px;
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
