--- a/src/app/aula/aula.component.html
+++ b/src/app/aula/aula.component.html
@@ -25,56 +25,53 @@
     Cerca
   </button>
 </section>
-<mat-card *ngIf="arrayStudenti">
-  <div class="example-container">
-    <div
-      cdkDropList
-      cdkDropListOrientation="horizontal"
-      #fila1="cdkDropList"
-      [cdkDropListData]="arrayStudenti"
-      [cdkDropListConnectedTo]="[fila2, fila3]"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)"
-    >
-      <div class="example-box" *ngFor="let studente of arrayStudenti" cdkDrag>
-        <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
+<mat-card>
+  <div cdkDropListGroup>
+    <div class="example-container">
+      <div
+        cdkDropList
+        cdkDropListOrientation="horizontal"
+        [cdkDropListData]="arrayStudenti"
+        class="example-list"
+        (cdkDropListDropped)="drop($event)"
+      >
+        <div class="example-box" *ngFor="let studente of arrayStudenti" cdkDrag>
+          <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
 
-        {{ studente.nome }}
+          {{ studente.nome }}
+        </div>
       </div>
-    </div>
-  </div>
-
-  <div class="example-container">
-    <div
-      cdkDropList
-      cdkDropListOrientation="horizontal"
-      #fila2="cdkDropList"
-      [cdkDropListData]="arrayStudenti2"
-      [cdkDropListConnectedTo]="[fila1, fila3]"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)"
-    >
-      <div class="example-box" *ngFor="let studente of arrayStudenti2" cdkDrag>
-        <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
-
-        {{ studente.nome }}
+      <div
+        cdkDropList
+        cdkDropListOrientation="horizontal"
+        [cdkDropListData]="arrayStudenti2"
+        class="example-list"
+        (cdkDropListDropped)="drop($event)"
+      >
+        <div
+          class="example-box"
+          *ngFor="let studente of arrayStudenti2"
+          cdkDrag
+        >
+          <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
+          {{ studente.nome }}
+        </div>
       </div>
-    </div>
-  </div>
-  <div class="example-container">
-    <div
-      cdkDropList
-      cdkDropListOrientation="horizontal"
-      #fila3="cdkDropList"
-      [cdkDropListData]="arrayStudenti3"
-      [cdkDropListConnectedTo]="[fila1, fila2]"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)"
-    >
-      <div class="example-box" *ngFor="let studente of arrayStudenti3" cdkDrag>
-        <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
-
-        {{ studente.nome }}
+      <div
+        cdkDropList
+        cdkDropListOrientation="horizontal"
+        [cdkDropListData]="arrayStudenti3"
+        class="example-list"
+        (cdkDropListDropped)="drop($event)"
+      >
+        <div
+          class="example-box"
+          *ngFor="let studente of arrayStudenti3"
+          cdkDrag
+        >
+          <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
+          {{ studente.nome }}
+        </div>
       </div>
     </div>
   </div>
