--- a/src/app/aula/aula.component.css
+++ b/src/app/aula/aula.component.css
@@ -1,21 +1,24 @@
+.example-container {
+  width: 100%;
+  background-color: red;
+  border: solid 1px black;
+}
 .example-list {
-  width: 1000px;
   max-width: 100%;
-  border: solid 1px #ccc;
+  padding: 0.5rem;
+  background-color: green;
   min-height: 60px;
   display: flex;
   flex-direction: row;
-  background: white;
   border-radius: 4px;
   overflow: hidden;
 }
 
 .example-box {
+  max-width: max-content;
   padding: 20px 10px;
-  border-right: solid 1px #ccc;
+  border: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
@@ -34,23 +37,19 @@
 }
 
 .cdk-drag-placeholder {
-  opacity: 0;
+  opacity: 1;
 }
 
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
-  border: none;
-}
-
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 .example-custom-placeholder {
-  background: rgba(204, 204, 204, 0.712);
+  background: #ccc;
   border: dotted 3px #999;
-  min-height: 60px;
+  min-width: 60px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
