--- a/src/app/aula/aula.component.html
+++ b/src/app/aula/aula.component.html
@@ -32,7 +32,7 @@
         <div
           cdkDropList
           cdkDropListOrientation="horizontal"
-          [cdkDropListData]="fila"
+          [cdkDropListData]="fila[i]"
           class="example-list"
           (cdkDropListDropped)="drop($event)"
         >
