--- a/src/app/aula/aula.component.css
+++ b/src/app/aula/aula.component.css
@@ -1,13 +1,11 @@
 .example-container {
   width: 100%;
-  background-color: red;
   border: solid 1px black;
 }
 .example-list {
   max-width: 100%;
   padding: 0.5rem;
-  background-color: green;
-  min-height: 60px;
+  background-color: rgb(228, 215, 238);
   display: flex;
   flex-direction: row;
   border-radius: 4px;
@@ -18,6 +16,7 @@
   max-width: max-content;
   padding: 20px 10px;
   border: solid 1px #ccc;
+  border-radius: 4px;
   color: rgba(0, 0, 0, 0.87);
   align-items: center;
   justify-content: space-between;
